祝日ファイルのURL変更

--- a/YayoiCsv/YayoiCsv.csproj
+++ b/YayoiCsv/YayoiCsv.csproj
@@ -271,6 +271,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="cybergrow.ico" />
+    <Content Include="xml\url.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
