経費入力画面に検索条件を追加

--- a/YayoiCsv/YayoiCsv.csproj
+++ b/YayoiCsv/YayoiCsv.csproj
@@ -200,6 +200,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="form\InputKeihi.resx">
       <DependentUpon>InputKeihi.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="form\MDIParent.resx">
       <DependentUpon>MDIParent.cs</DependentUpon>
